--- a/packages/articles/public/assets/css/articles.css
+++ b/packages/articles/public/assets/css/articles.css
@@ -3,7 +3,7 @@ ul.articles li:not(:last-child) {
 }
 
 h1.title-lst{
-	margin-bottom: 0px;
+	margin-bottom: 0;
 	margin-top: 20px;
 }
 
@@ -34,9 +34,13 @@ h1.title-lst{
 	padding-bottom: 10px;
 }
 
+.post-content pre {
+	padding: 7px;
+}
+
 .post-content div.btn-group{
 	position: absolute;
-	right: 0px;
+	right: 0;
 	top: 5px;
 	opacity: .9;
 	display: none;
@@ -103,12 +107,12 @@ h6 {
 
 h1,
 .h1 {
-  font-size: 51px;
+  font-size: 46px;
 }
 
 h2,
 .h2 {
-  font-size: 43px;
+  font-size: 38px;
 }
 
 h3,
@@ -118,15 +122,23 @@ h3,
 
 h4,
 .h4 {
-  font-size: 19px;
+  font-size: 20px;
 }
 
 h5,
 .h5 {
-  font-size: 18px;
+  font-size: 16px;
 }
 
 h6,
 .h6 {
   font-size: 14px;
+}
+
+/*
+ * Editor
+ */
+.editor .btn-toolbar {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
