--- a/packages/articles/public/views/create.html
+++ b/packages/articles/public/views/create.html
@@ -1,28 +1,40 @@
 <section data-ng-controller="ArticlesController">
-  <form name="articleForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(articleForm.$valid)" novalidate>
-    <div class="form-group" ng-class="{ 'has-error' : submitted && articleForm.title.$invalid }">
-      <label mean-token="'create-title'" class="col-md-3 control-label">Title</label>
-      <div class="col-md-9">
-        <input name="title" type="text" class="form-control" data-ng-model="title" id="title" placeholder="Title" required>
+  <form name="articleForm" class="form-horizontal editor" role="form" data-ng-submit="create(articleForm.$valid)" novalidate>
+    <div class="form-group title" ng-class="{ 'has-error' : submitted && articleForm.title.$invalid }">
+      <div class="col-md-12">
+        <input name="title" type="text" class="form-control title" data-ng-model="title" id="title" placeholder="Title" required>
         <div ng-show="submitted && articleForm.title.$invalid" class="help-block">
           <p ng-show="articleForm.title.$error.required">Title is required</p>
         </div>
       </div>
-
     </div>
+    
+    <div style="position: relative" data-ng-include="'/articles/views/include/article-meta.html'">
+  	</div>
+    
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" data-ng-include="'/articles/views/include/editor-toolbar.html'">
+    </div>
+    
+    
     <div class="form-group" ng-class="{ 'has-error' : submitted && articleForm.content.$invalid }">
-      <label mean-token="'create-content'" for="content" class="col-md-3 control-label">Content</label>
-      <div class="col-md-9">
-        <textarea name="content" data-ng-model="content" id="content" cols="30" rows="10" placeholder="Content" class="form-control" required></textarea>
+      <div class="col-md-12">
+        <div ng-model="content" ui-codemirror-markdown="editorOptions"></div>
+        <!--<textarea name="content" data-ng-model="content" id="content" cols="30" rows="30" placeholder="Content" class="form-control edit-content" required></textarea>-->
         <div ng-show="submitted && articleForm.content.$invalid" class="help-block">
           <p ng-show="articleForm.content.$error.required">Content is required</p>
         </div>
       </div>
     </div>
     <div class="form-group">
-      <div class="col-md-offset-3 col-md-9">
-        <button mean-token="'create-submit'" type="submit" class="btn btn-info">Submit</button>
+      <div class="col-md-9">
+
       </div>
     </div>
   </form>
+  
+  <!-- <div class="col-md-6 render">
+  	<div class="render-title"><h1>{{title || "[Title]"}}</h1></div>
+  	<hr>
+  	<div class="render-content" ng-bind-html="htmlContent" ></div>
+  </div> -->
 </section>
