--- a/packages/articles/public/views/edit.html
+++ b/packages/articles/public/views/edit.html
@@ -1,28 +1,41 @@
 <section data-ng-controller="ArticlesController" data-ng-init="findOne()">
-  <form name="articleForm" class="form-horizontal col-md-6" role="form" data-ng-submit="update(articleForm.$valid)" novalidate>
-    <div class="form-group" ng-class="{ 'has-error' : submitted && articleForm.title.$invalid }">
-      <label mean-token="'edit-title'" for="title" class="col-md-2 control-label">Title</label>
-      <div class="col-md-10">
-        <input name="title" type="text" class="form-control" data-ng-model="article.title" id="title" placeholder="Title" required>
+  <form name="articleForm" class="form-horizontal editor" role="form" data-ng-submit="update(articleForm.$valid)" novalidate>
+  
+  	<div class="form-group title" ng-class="{ 'has-error' : submitted && articleForm.title.$invalid }">
+      <div class="col-md-12">
+        <input name="title" type="text" class="form-control title" data-ng-model="article.title" id="title" placeholder="Title" required>
         <div ng-show="submitted && articleForm.title.$invalid" class="help-block">
           <p ng-show="articleForm.title.$error.required">Title is required</p>
         </div>
       </div>
-
     </div>
+    
+  	<div style="position: relative" data-ng-include="'/articles/views/include/article-meta.html'">
+  	</div>
+    
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" data-ng-include="'/articles/views/include/editor-toolbar.html'">
+    </div>
+    
     <div class="form-group" ng-class="{ 'has-error' : submitted && articleForm.content.$invalid }">
-      <label mean-token="'edit-content'" for="content" class="col-md-2 control-label">Content</label>
-      <div class="col-md-10">
-        <textarea name="content" data-ng-model="article.content" id="content" cols="30" rows="10" placeholder="Content" class="form-control" required></textarea>
+      <div class="col-md-12">
+        <div ng-model="article.content" ui-codemirror-markdown="editorOptions"></div>
+        <!--<textarea name="content" data-ng-model="article.content" id="content" cols="30" rows="30" placeholder="Content" class="form-control edit-content" required></textarea>-->
         <div ng-show="submitted && articleForm.content.$invalid" class="help-block">
           <p ng-show="articleForm.content.$error.required">Content is required</p>
         </div>
       </div>
     </div>
     <div class="form-group">
-      <div class="col-md-offset-2 col-md-10">
-        <button mean-token="'edit-submit'" type="submit" class="btn btn-default">Submit</button>
+      <div class="col-md-10">
+        
       </div>
     </div>
   </form>
+  
+<!--   <div class="col-md-6">
+  	<div class="render-title"><h1>{{article.title}}</h1></div>
+  	<hr>
+  	<div class="render-content" ng-bind-html="htmlContent" ></div>
+  </div> -->
+  
 </section>
