--- a/packages/system/server/views/includes/head.html
+++ b/packages/system/server/views/includes/head.html
@@ -20,6 +20,24 @@
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/system/assets/lib/font-awesome-4.3.0/css/font-awesome.css">
 
+  <link rel="stylesheet" href="/bower_components/codemirror/lib/codemirror.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/ambiance.css">
+  <!-- <link rel="stylesheet" href="/bower_components/codemirror/theme/3024-day.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/3024-night.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/base16-dark.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/base16-light.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/blackboard.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/cobalt.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/eclipse.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/elegant.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/erlang-dark.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/lesser-dark.css">
+  <link rel="stylesheet" href="/bower_components/codemirror/theme/mbo.css"> -->
+  
+  <link rel="stylesheet" href="/system/assets/lib/highlight/styles/default.css">
+  <link rel="stylesheet" href="/system/assets/lib/highlight/styles/monokai.css">
+  <link rel="stylesheet" href="/system/assets/lib/marked/ui-codemirror.css">
+
   {% for file in aggregatedassets.header.css %}
     <link rel="stylesheet" href="{{file}}">
   {% endfor %}
