--- a/packages/system/public/views/includes/navbar-profile.html
+++ b/packages/system/public/views/includes/navbar-profile.html
@@ -1,7 +1,7 @@
 
 <ul class="nav navbar-nav">
     
-    <li class="create-btn" ng-class="{'active': state==='articles/create'}">
+    <li class="create-btn" ng-class="{'active': stateName==='create article' || stateName==='edit article'}">
         <a href="/#!/articles/create" class="dropdown-toggle">
             <i class="fa fa-pencil"></i>
         </a>
