--- a/packages/system/server/views/includes/foot.html
+++ b/packages/system/server/views/includes/foot.html
@@ -44,6 +44,8 @@
 <script type="text/javascript" src="/system/assets/lib/marked/marked.js"></script>
 <script type="text/javascript" src="/system/assets/lib/marked/ui-codemirror.js"></script>
 <script type="text/javascript" src="/system/assets/lib/lodash/lodash.js"></script>
+<script type="text/javascript" src="/system/assets/lib/bootstrap-tagsinput/bootstrap-tagsinput.js"></script>
+<script type="text/javascript" src="/system/assets/lib/bootstrap-tagsinput/bootstrap-tagsinput-angular.js"></script>
 
 {% if (process.env.NODE_ENV == 'development') %}
   <!-- Livereload script rendered -->
