--- a/packages/system/server/views/includes/head.html
+++ b/packages/system/server/views/includes/head.html
@@ -19,6 +19,7 @@
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/system/assets/lib/font-awesome-4.3.0/css/font-awesome.css">
+  <link rel="stylesheet" href="/system/assets/lib/bootstrap-tagsinput/bootstrap-tagsinput.css">
 
   <link rel="stylesheet" href="/bower_components/codemirror/lib/codemirror.css">
   <link rel="stylesheet" href="/bower_components/codemirror/theme/ambiance.css">
